--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
   Resources:
     - Instructables: "http://deanattali.com/beautiful-jekyll/"
     - GitHub: "http://www.markdowntutorial.com/"
+    - Thingiverse: "https://www.thingiverse.com/WiredMaker/designs"
     - Instagram: "https://pages.github.com/"
   About: "aboutme"
 
