--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: Open source DIY Electronics
 navbar-links:
   Home: ""
   Resources:
+    - Projects: "projects"
     - Instructables: "https://www.instructables.com/member/BlinkMaker/"
     - GitHub: "https://github.com/BlinkMaker"
     - Thingiverse: "https://www.thingiverse.com/BlinkMaker/designs"
