--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ navbar-links:
     - GitHub: "https://github.com/BlinkMaker"
     - Thingiverse: "https://www.thingiverse.com/BlinkMaker/designs"
     - Instagram: "https://www.instagram.com/blinkmaker/"
-  About: "aboutme"
+  About Me: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
