--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,7 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: true
-#  email: "someone@example.com"
+#  rss: true
 #  facebook: daattali
   github: blinkmaker
 #  twitter: daattali
@@ -85,6 +84,7 @@ social-network-links:
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
   instagram: blinkmaker
+  email: "blinkmaker01@gmail.com"
 #  youtube: user/deanat78
 #  spotify: yourname
 #  telephone: +14159998888
