--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ navbar-links:
     - GitHub: "https://github.com/BlinkMaker"
     - Instructables: "https://www.instructables.com/member/BlinkMaker/"
     - Thingiverse: "https://www.thingiverse.com/BlinkMaker/designs"
+    - Sketchfab: https://sketchfab.com/blinkmaker
     - Instagram: "https://www.instagram.com/blinkmaker/"
   About Me: "aboutme"
 
