--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Blink Maker
+title: BlinkMaker
 
 # Short description of your site
 description: Open source DIY Electronics
@@ -84,8 +84,8 @@ social-network-links:
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
   instagram: blinkmaker
-  email: "blinkmaker01@gmail.com"
-#  youtube: user/deanat78
+#  email: "blinkmaker01@gmail.com"
+#  youtube: user/blinkmaker
 #  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
